// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should find the shortest paths to all other nodes from A 1`] = `
Map {
  "A" => Array [
    "A",
    0,
  ],
  "B" => Array [
    "A",
    2,
  ],
  "C" => Array [
    "A",
    3,
  ],
  "D" => Array [
    "C",
    8,
  ],
}
`;

exports[`should find the shortest paths to all other nodes from B 1`] = `
Map {
  "B" => Array [
    "B",
    0,
  ],
  "A" => Array [
    "B",
    1,
  ],
  "C" => Array [
    "B",
    7,
  ],
  "D" => Array [
    "B",
    8,
  ],
}
`;

exports[`should find the shortest paths to all other nodes from C 1`] = `
Map {
  "C" => Array [
    "C",
    0,
  ],
  "D" => Array [
    "C",
    5,
  ],
  "B" => Array [
    "C",
    6,
  ],
  "A" => Array [
    "C",
    10,
  ],
}
`;
